Front-end: Home Page: Header + Footer + Project Content

--- a/_includes/layouts/home.liquid
+++ b/_includes/layouts/home.liquid
@@ -2,11 +2,36 @@
 
 
 
+
+<!-- Intro Section -->
+<section id="intro-section" class="hidden intro-section space-150-top-bottom">
+	<div class="container">
+		<div class="row">
+			<div class="columns small-12">
+				<div class="h3">Typography:</div>
+				<div class="h1 strong">Lorem ipsum, dolor sit amet consectetur.</div>
+				<div class="h2 strong">Lorem ipsum dolor sit amet consectetur.</div>
+				<div class="h3 strong">Lorem ipsum dolor sit amet consectetur.</div>
+				<div class="h4 strong">Lorem ipsum dolor sit amet consectetur.</div>
+				<div class="h5 strong">Lorem ipsum dolor sit amet consectetur.</div>
+				<div class="h6">Lorem ipsum dolor sit amet consectetur.</div>
+				<div class="p">Lorem ipsum dolor, sit amet consectetur,.</div>
+				<div class="label">Lorem ipsum dolor sit amet consectetur.</div>
+				<div class="small space-25-bottom">Lorem, ipsum dolor sit amet consectetur.</div>
+				<a class="button fill-blue" href="https://google.com">Search</a>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- END: Intro Section -->
+
+
+
+
+
 <!-- Project Section -->
-<section id="project-section" class="project-section fill-dark-gradient bg-fixed space-25-top-bottom">
+<section id="project-section" class="project-section fill-dark-gradient bg-fixed space-50-top-bottom">
 	<!-- <div class="container"> -->
-		{% include 'parts/project-card.liquid' %}
-		{% include 'parts/project-card.liquid' %}
 		{% include 'parts/project-card.liquid' %}
 	<!-- </div> -->
 </section>
