--- a/_includes/parts/footer.liquid
+++ b/_includes/parts/footer.liquid
@@ -1,37 +1,89 @@
+<style>
+	.footer-menu-section {}
+
+	@media( max-width: 639px )  {
+		.footer-menu-section .title .long-word {
+			word-break: break-all;
+			hyphens: manual;
+		}
+	}
+</style>
+
 <!-- Footer Menu Section -->
-<section id="footer-menu-section" class="footer-menu-section fill-white">
+<section id="footer-menu-section" class="footer-menu-section space-200-top-bottom">
 	<div class="container">
-		<div class="row space-200-top-bottom">
-			<div class="columns small-12 large-7 space-25 space-150-bottom">
-				<div class="logo space-100-bottom" style="width: 75%;">
-					<img src="media/logo-color.svg" alt="" style="transform: scale(1.06);">
+		<div class="row space-150-bottom">
+			<div class="columns small-10 medium-6 large-5">
+				<div class="logo space-50-bottom">
+					<img src="media/logo-full-white.png" alt="">
 				</div>	
-				<div class="h4 strong text-violet font-h">Architecture that Inspires and Endures</div>
-				<div class="p">Rooted in Human-Centric Design, our unique approach combines functionality with timeless beauty!</div>
 			</div>
-			<div class="columns small-12 medium-6 large-4 large-offset-1 space-25 space-100-bottom">
-				<div class="h5 text-neutral-4 block space-50-bottom">Quick Links</div>
-				<a class="text-violet p inline space-25-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Greyscale Stories</a><br>
-				<a class="text-violet p inline space-25-bottom" href="/about"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> About Us</a><br>
-				<a class="text-violet p inline space-25-bottom" href="/for-homeowner"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> For Homeowner</a><br>
-				<a class="text-violet p inline space-25-bottom" href="/for-business"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> For Business</a><br>
-				<a class="text-violet p inline space-25-bottom" href="/for-student"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> For Student</a><br>
+			<div class="columns small-12 large-6 large-offset-1">
+				<!-- <div class="title h2 strong text-gradient font-h">Digital <span class="long-word">Transformation</span> and Growth Marketing Experts!</div> -->
+				<div class="title h3 strong text-gradient font-h">Experts in Digital <span class="long-word">Transformation</span> and Growth Marketing!</div>
+				<div class="description p space-50-top">We are a Branding, Marketing and Advertising Agency, that leverages data-driven decision making to deliver innovative solutions for your business. Our expertise spans across branding, web development, eCommerce, SEO, digital advertising, social media, and video production. We help businesses of all sizes achieve their digital goals by combining creative designs with cutting-edge technology.</div>
 			</div>
-			<div class="columns small-12 medium-6 large-4 space-25 space-100-bottom">
-				<div class="h5 text-neutral-4 block space-50-bottom">Address</div>
-				<div class="block p space-50-bottom">No.9, 39th Cross, 4th 'T' Block,<br>Jayanagar, Bengaluru - 560041.</div>
-				<a class="text-violet p inline" href="https://maps.app.goo.gl/CoMc1wfP6cwJQHXK9" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">pin_drop</span> Open in Google Maps</a><br>
+		</div>
+		<hr class="fill-gradient">
+		<div class="row space-150-top">
+			<div class="columns small-12 medium-6 large-4 space-150-bottom">
+				<div class="h5 text-neutral-5 block space-50-bottom">Location</div>
+				<div class="block p space-50-bottom">No.4, 4th Cross, CRP Layout, Horamavu, Bangalore, KA — 560043, India.</div>
+				<a class="p inline" href="https://maps.app.goo.gl/jprwuP5fVmy4n14k9" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">pin_drop</span> Open in Google Maps</a><br>
 			</div>
-			<div class="columns small-12 medium-6 large-4 space-25 space-100-bottom">
-				<div class="h5 text-neutral-4 block space-50-bottom">Phone</div>
-				<a class="text-violet p inline space-50-bottom" href="tel:+91 8041510310" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">headset_mic</span> +91 8041510310</a><br>
-				<a class="text-violet p inline space-50-bottom" href="tel:+91 9886466930" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">headset_mic</span> +91 9886466930</a><br>
+			<div class="columns small-12 medium-6 large-3 large-offset-2 space-150-bottom">
+				<div class="h5 text-neutral-4 block space-50-bottom">Links</div>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Projects</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> About Us</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Careers</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Services</a><br>
 			</div>
-			<div class="columns small-12 medium-6 large-4 space-25 space-100-bottom">
-				<div class="h5 text-neutral-4 block space-50-bottom">Email</div>
-				<a class="text-violet p inline space-50-bottom" href="mailto:design-consult@greyscale.in" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">inbox</span> design-consult@greyscale.in</a><br>
-				<a class="text-violet p inline space-50-bottom" href="mailto:info@greyscale.in" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">inbox</span> info@greyscale.in</a><br>
-				<a class="text-violet p inline space-50-bottom" href="mailto:withus@greyscale.in" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">inbox</span> withus@greyscale.in</a><br>
+			<div class="columns small-12 medium-6 large-3 space-150-bottom">
+				<div class="h5 text-neutral-4 block space-50-bottom">Connect</div>
+				<a class="p inline space-50-bottom" href="tel:+918971683598" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">headset_mic</span> +91 89716 83598 (Official)</a><br>
+				<a class="p inline space-50-bottom" href="mailto:hello@windsorsouza.com" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">inbox</span> hello@windsorsouza.com</a><br>
+				<a class="p inline space-50-bottom" href="tel:+919986882698" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">headset_mic</span> +91 99868 82698 (Mario)</a><br>
+				<a class="p inline space-50-bottom" href="tel:+917204599816" target="_blank"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">headset_mic</span> +91 72045 99816 (Marian)</a><br>
+			</div>
+			<div class="columns small-12 medium-6 large-3 space-150-bottom">
+				<div class="h5 text-neutral-4 block space-50-bottom">For Design</div>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Logo Design</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Brand Identity Design</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Visiting Cards</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Brochures</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Packaging Design</a><br>
+			</div>
+			<div class="columns small-12 medium-6 large-3 space-150-bottom">
+				<div class="h5 text-neutral-4 block space-50-bottom">For Website</div>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+			</div>
+			<div class="columns small-12 medium-6 large-3 space-150-bottom">
+				<div class="h5 text-neutral-4 block space-50-bottom">For Marketing</div>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+			</div>
+			<div class="columns small-12 medium-6 large-3 space-150-bottom">
+				<div class="h5 text-neutral-4 block space-50-bottom">For Production</div>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
+				<a class="p inline space-50-bottom" href="/"><span class="material-symbols-rounded inline-bottom" style="font-size: var(--h5);">link</span> Links</a><br>
 			</div>
 		</div>
 	</div>
@@ -50,11 +102,11 @@
 		.copyright-section .signature { text-align: left; }
 	}
 </style>
-<section class="copyright-section space-50-top-bottom fill-dark-gradient" id="copyright-section">
+<section class="copyright-section space-50-top-bottom fill-light" id="copyright-section">
 	<div class="container">
 		<div class="row">
 			<div class="columns small-12 large-8 space-25">
-				<div class="p font-h strong">Copyright <span class="h6 inline-middle">&copy;</span> 2025 – WINDSOR SOUZA PVT LTD | All Rights Reserved</div>
+				<div class="p text-gradient font-h strong">Copyright <span class="h6 inline-middle">&copy;</span> 2025 – WINDSOR SOUZA PVT LTD | All Rights Reserved</div>
 			</div>
 			<!-- <div class="signature columns small-12 large-4 space-25">
 				<a href="https://windsorsouza.com?utm_source=client+website" target="_blank" class="p block font-h">Handcrafted with <span class="h6 inline-middle" style="color: darkorange;">&heartsuit;</span> at — <span style="color: darkorange;">WindsorSouza.com</span></a>
