--- a/_includes/parts/head.liquid
+++ b/_includes/parts/head.liquid
@@ -119,7 +119,7 @@
 
 <!--  ★  MARKUP GOES HERE  ★  -->
 
-<div id="page-wrapper"><!-- Page Wrapper -->
+<div id="page-wrapper" class="fill-dark-gradient bg-fixed"><!-- Page Wrapper -->
 
 
 
