Front-end: Home Page: Project Cards: CTA

--- a/_includes/parts/project-card.liquid
+++ b/_includes/parts/project-card.liquid
@@ -60,7 +60,10 @@
 	.project .info .tags .tag:hover { filter: invert(100%); }
 
 	.project .info .cta {
-
+		line-height: 2;
+		font-size: calc(var(--fem) * 3.5);
+		position: absolute;
+		margin-top: calc(var(--fem) * 3.5);
 	}
 	
 	.project .mockup {
@@ -82,6 +85,7 @@
 			flex-direction: row;
 		}
 		.project .info {
+			margin-top: calc(var(--space-100) * 3);
 			width: 50%;
 		}
 		.project .mockup {
@@ -90,6 +94,27 @@
 	}
 	@media( min-width: 1480px ) {}
 </style>
+<!-- Each Project -->
+<div class="row space-100-left-right space-50-top-bottom">
+	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/kaatikaadu-bg.png');">
+		<div class="info space-150 float-left">
+			<div class="client">KaatiKaadu</div>
+			<div class="title strong font-h">Logo &amp; Website for Jungle Camping Experience Brand</div>
+			<div class="tags">
+				<div class="tag inline">Logo Design</div>
+				<div class="tag inline">Website</div>
+				<div class="tag inline">Merchandise</div>
+			</div>
+			<a class="cta inline" href="/">
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
+			</a>
+		</div>
+		<div class="mockup space-150 float-right">
+			<img class="block" src="media/projects/kaatikaadu-mockup.png" alt="">
+		</div>
+	</div>
+</div>
+<!-- End: Each Project -->
 <!-- Each Project -->
 <div class="row space-100-left-right space-50-top-bottom">
 	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/velvesto-bg.svg');">
@@ -105,7 +130,7 @@
 				<div class="tag inline">Product Display</div>
 			</div>
 			<a class="cta inline" href="/">
-				<span>Learn More</span>
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
 			</a>
 		</div>
 		<div class="mockup space-150 float-right">
@@ -130,7 +155,7 @@
 				<div class="tag inline">Signage</div>
 			</div>
 			<a class="cta inline" href="/">
-				<span>Learn More</span>
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
 			</a>
 		</div>
 		<div class="mockup space-150 float-right">
@@ -154,7 +179,7 @@
 				<div class="tag inline">Brand Collateral</div>
 			</div>
 			<a class="cta inline" href="/">
-				<span>Learn More</span>
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
 			</a>
 		</div>
 		<div class="mockup space-150 float-right">
@@ -178,7 +203,7 @@
 				<div class="tag inline">Store Branding</div>
 			</div>
 			<a class="cta inline" href="/">
-				<span>Learn More</span>
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
 			</a>
 		</div>
 		<div class="mockup space-150 float-right">
@@ -200,7 +225,7 @@
 				<div class="tag inline">Brand Collateral</div>
 			</div>
 			<a class="cta inline" href="/">
-				<span>Learn More</span>
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
 			</a>
 		</div>
 		<div class="mockup space-150 float-right">
@@ -223,7 +248,7 @@
 				<div class="tag inline">Brand Collateral</div>
 			</div>
 			<a class="cta inline" href="/">
-				<span>Learn More</span>
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
 			</a>
 		</div>
 		<div class="mockup space-150 float-right">
