--- a/_includes/parts/header.liquid
+++ b/_includes/parts/header.liquid
@@ -11,22 +11,28 @@
 		box-shadow: 0 0 3px 1px rgba(0, 120, 255, 0.35),  0 0 9px 3px rgba(180, 50, 255, 0.25);
 	}
 
-	.header-section .navigation .link { line-height: 1; }
+	.header-section .navigation .link {
+		line-height: 1;
+		margin-left: var(--space-50);
+	}
 </style>
 <!-- Header Section -->
 <section id="header-section" class="header-section space-150-left-right space-50-top-bottom position-sticky" style="z-index: 9; top: 0; left: 0;">
-	<div class="menu radius-75 fill-light space-75">
+	<div class="menu radius-75 fill-light space-50">
 		<span class="logo" style="font-size: 0;">
-			<a class="inline" href="/" style="font-size: 0; width: calc(var(--space-100) * 5);">
+			<!-- <a class="inline" href="/" style="font-size: 0; width: calc(var(--space-100) * 5);">
 				<img class="block no-pointer" src="media/logo-full-black.png" alt="WindsorSouza Logo">
+			</a> -->
+			<a class="inline space-25-left" href="/" style="font-size: 0; width: calc(var(--space-100) * 3);">
+				<img class="block no-pointer" src="media/logo-min-black.png" alt="WindsorSouza Logo">
 			</a>
 		</span>
-		<span class="navigation hide-small hide-medium">
-			<a class="link p text-uppercase inline space-50" href="/">Projects (All)</a>
-			<a class="link p text-uppercase inline space-50" href="/">About</a>
-			<a class="link p text-uppercase inline space-50" href="/">Careers</a>
-			<a class="link p text-uppercase inline space-50" href="/">Services</a>
-			<a class="link p text-uppercase inline space-50 fill-gradient text-white radius-25" href="/" style="margin-left: var(--space-50);"><span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;`">perm_phone_msg</span> +91 89716 83598</a>
+		<span class="navigation hide-small">
+			<a class="link p text-uppercase inline space-25 space-50-left-right radius-25" href="/">Projects <span class="material-symbols-rounded inline-middle" style="font-size: var(--h6); line-height: 1;">unfold_more</span></a>
+			<a class="link p text-uppercase inline space-25" href="/">About</a>
+			<a class="link p text-uppercase inline space-25" href="/">Careers</a>
+			<a class="link p text-uppercase inline space-25" href="/">Services <span class="material-symbols-rounded inline-middle" style="font-size: var(--h6); line-height: 1;">unfold_more</span></a>
+			<a class="link p text-uppercase inline space-25 space-50-left-right fill-gradient text-white radius-25" href="/"><span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">perm_phone_msg</span> +91 89716 83598</a>
 		</span>
 	</div>
 </section>
