Front-end: Home Page: Project Cards: Content

--- a/_includes/parts/header.liquid
+++ b/_includes/parts/header.liquid
@@ -13,25 +13,25 @@
 
 	.header-section .navigation .link {
 		line-height: 1;
-		margin-left: var(--space-50);
+		margin-left: var(--space-25);
 	}
 </style>
 <!-- Header Section -->
 <section id="header-section" class="header-section space-150-left-right space-50-top-bottom position-sticky" style="z-index: 9; top: 0; left: 0;">
-	<div class="menu radius-75 fill-light space-50">
-		<span class="logo" style="font-size: 0;">
-			<!-- <a class="inline" href="/" style="font-size: 0; width: calc(var(--space-100) * 5);">
+	<div class="menu radius-50 fill-light">
+		<span class="logo space-25-top-bottom space-50-left-right" style="font-size: 0;">
+			<a class="inline space-25-left" href="/" style="font-size: 0; width: calc(var(--space-100) * 4);">
 				<img class="block no-pointer" src="media/logo-full-black.png" alt="WindsorSouza Logo">
-			</a> -->
-			<a class="inline space-25-left" href="/" style="font-size: 0; width: calc(var(--space-100) * 3);">
-				<img class="block no-pointer" src="media/logo-min-black.png" alt="WindsorSouza Logo">
 			</a>
+			<!-- <a class="inline space-25-left" href="/" style="font-size: 0; width: calc(var(--space-100) * 3);">
+				<img class="block no-pointer" src="media/logo-min-black.png" alt="WindsorSouza Logo">
+			</a> -->
 		</span>
-		<span class="navigation hide-small">
-			<a class="link p text-uppercase inline space-25 space-50-left-right radius-25" href="/">Projects <span class="material-symbols-rounded inline-middle" style="font-size: var(--h6); line-height: 1;">unfold_more</span></a>
+		<span class="navigation hide-small space-50">
+			<a class="link p text-uppercase inline space-25" href="/">Projects<span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">keyboard_arrow_down</span></a>
 			<a class="link p text-uppercase inline space-25" href="/">About</a>
 			<a class="link p text-uppercase inline space-25" href="/">Careers</a>
-			<a class="link p text-uppercase inline space-25" href="/">Services <span class="material-symbols-rounded inline-middle" style="font-size: var(--h6); line-height: 1;">unfold_more</span></a>
+			<a class="link p text-uppercase inline space-25" href="/">Services<span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">keyboard_arrow_down</span></a>
 			<a class="link p text-uppercase inline space-25 space-50-left-right fill-gradient text-white radius-25" href="/"><span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">perm_phone_msg</span> +91 89716 83598</a>
 		</span>
 	</div>
