--- a/_includes/parts/project-card.liquid
+++ b/_includes/parts/project-card.liquid
@@ -117,6 +117,34 @@
 <!-- End: Each Project -->
 <!-- Each Project -->
 <div class="row space-100-left-right space-50-top-bottom">
+	<div class="project fill-light radius-100 img-cover" style="background-image: url('media/projects/kneetoes-bg.svg');">
+		<div class="info space-150 float-left">
+			<div class="client">Kneetoes</div>
+			<div class="title strong font-h">UX Driven Ecommerce and Branding for a Footwear Company</div>
+			<div class="tags">
+				<div class="tag inline">Logo Design</div>
+				<div class="tag inline">Website</div>
+				<div class="tag inline">Ecommerce</div>
+				<div class="tag inline">SEO</div>
+				<div class="tag inline">Brand Identity</div>
+				<div class="tag inline">Package Design</div>
+				<div class="tag inline">Brand Collateral</div>
+				<div class="tag inline">Store Branding</div>
+				<div class="tag inline">Signage</div>
+				<div class="tag inline">Walkthrough Film</div>
+			</div>
+			<a class="cta inline" href="/">
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
+			</a>
+		</div>
+		<div class="mockup space-150 float-right">
+			<img class="block" src="media/projects/kneetoes-mockup.png" alt="">
+		</div>
+	</div>
+</div>
+<!-- End: Each Project -->
+<!-- Each Project -->
+<div class="row space-100-left-right space-50-top-bottom">
 	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/velvesto-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Velvesto</div>
